--- a/style.css
+++ b/style.css
@@ -39,13 +39,11 @@ body{
     color: black;
     background-color: lightpink;
     border: 2px solid black;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 10px 10px 10px;
     padding: 5px 5px;
 }
 main{
     display: flex;
-    /* border: 2px solid red; */
     height: 100vh;
     justify-content: center;
     align-items: center;
@@ -68,7 +66,6 @@ h2{
 }
 p{
     font-size: 18px;
-    /* letter-spacing: 1px; */
     line-height: 25px;
 }
 .btn{
